--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Koulen&family=Lato:wght@300;400&display=swap');
+
 #content {
     max-width: 1600px;
     margin: 0 auto;
@@ -6,10 +8,13 @@ nav a {
     text-align: center;
     color: white;
     text-decoration: none;
+    font-family: Lato, Helvetica, sans-serif;
+    padding: 35px;
 }
 
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
+    font-family: Koulen, Georgia, sans-serif;
 }
 
 .button-box {
@@ -20,6 +25,11 @@ main section {
     text-align: center;
 }
 
+main section img {
+   
+    box-sizing: border-box;
+}
+
 #background {
     height: 725px;
     background-color: #05668D;
@@ -27,6 +37,10 @@ main section {
 
 body {
     background-color: #EBF2FA;
+    font-family: Lato, Helvetica, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -42,6 +56,16 @@ nav a:hover {
     background-color: #679436;
     color: white;
     text-decoration: none;
+    font-family: Lato, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+    border-radius: 5px;
+}
+
+/* I separated this out to give contrast */
+.join {
+    background-color: #05668D;
 }
 
 .book:hover, .join:hover {
@@ -51,15 +75,22 @@ nav a:hover {
 
 .msg {
     background-color: #679436;
+    line-height: 1.5em;
+    padding: 35px;
 }
 
 footer {
     background-color: #679436;
     color: white;
+    padding: 25px 50px;
+    margin-top: 200px;
 }
 
 .home-title {
     color: #05668D;
+    font-family: Koulen, Georgia, sans-serif;
+    font-size: 2em;
+    margin-top: 10px;
 }
 
 h4 {
@@ -69,19 +100,26 @@ h4 {
 /*  I added an h2 color as well because in the site plan I do not use black  */
 h2 {
     color: #05668D;
+    font-family: Lato, Helvetica, sans-serif;
+    margin: 0;
 }
 
 .msg h2 {
     color: white;
+    font-family: Koulen, Georgia, sans-serif;
 }
 
 .msg p {
     color: white;
+    font-family: Lato, Helvetica, sans-serif;
+    font-size: .8em;
+    padding-bottom: 15px;
 }
 
 footer a {
     color: white;
     text-decoration: none;
+    font-family: Lato, Helvetica, sans-serif;
 }
 
 footer a:hover {
@@ -94,6 +132,7 @@ footer a:hover {
 
 .icon {
     width: 80px;
+    padding-top: 10px;
 }
 
 #hero-img {
@@ -102,8 +141,34 @@ footer a:hover {
 
 footer p {
     font-size: 1.2em;
+    font-family: Lato, Helvetica, sans-serif;
 }
 
 footer p a:hover {
     text-decoration: underline;
+}
+
+#logo_link {
+    padding-top: 5px;
+}
+
+footer .social img {
+    padding-top: 15px;
+}
+
+rivers-card, .camping-card, .rapids-card {
+    margin: 200px 0;
+}
+
+.card-img {
+    border: 10px solid #05668D;
+}
+
+/* In the example these two looked like they needed more space */
+.mountains {
+    padding: 100px 0 200px 0;
+}
+
+.button-box {
+    margin-bottom: 150px;
 }
