--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -4,17 +4,45 @@
     max-width: 1600px;
     margin: 0 auto;
 }
+
+nav {
+    display: flex;
+    justify-content: space-around;
+}
+
 nav a {
     text-align: center;
-    color: white;
+    color: #EBF2FA;
     text-decoration: none;
     font-family: Lato, Helvetica, sans-serif;
     padding: 35px;
 }
 
+#hero {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    margin-top: -100px;
+}
+
+#hero-box {
+    grid-column: 1/4;
+    grid-row: 1/3;
+    z-index: -1;
+}
+
 #hero-msg h1, #hero-msg h4 {
     text-align: center;
     font-family: Koulen, Georgia, sans-serif;
+}
+
+#hero-msg h4 {
+    color: #EBF2FA;
+}
+
+#hero-msg {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    margin-top: 100px;
 }
 
 .button-box {
@@ -30,9 +58,16 @@ main section img {
     box-sizing: border-box;
 }
 
+.home-grid {
+    display: grid;
+    grid-template-columns: 10fr 10fr 10fr 10fr 10fr 10fr 10fr 10fr 10fr 10fr;
+}
+
 #background {
     height: 725px;
     background-color: #05668D;
+    grid-column: 1/11;
+    grid-row: 4/9;
 }
 
 body {
@@ -45,16 +80,18 @@ body {
 
 header {
     background-color: #679436;
+    display: grid;
+    grid-template-columns: 150px auto;
 }
 
 nav a:hover {
     background-color: #A5BE00;
-    color: white;
+    color: #EBF2FA;
 }
 
 .book, .join {
     background-color: #679436;
-    color: white;
+    color: #EBF2FA;
     text-decoration: none;
     font-family: Lato, Helvetica, sans-serif;
     font-size: 18px;
@@ -70,24 +107,31 @@ nav a:hover {
 
 .book:hover, .join:hover {
     background-color: #A5BE00;
-    color: white;
+    color: #EBF2FA;
 }
 
 .msg {
     background-color: #679436;
     line-height: 1.5em;
     padding: 35px;
+    grid-column: 6/10;
+    grid-row: 6/7;
+    box-shadow: 5px 5px 10px #A5BE00;
 }
 
 footer {
     background-color: #679436;
-    color: white;
+    color: #EBF2FA;
     padding: 25px 50px;
     margin-top: 200px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
+/* Originally had this as the blue, but now that it's over the image, none of my colors work well.  White seemed to be the best out of the available ones.  I'd probably change it back and add a stroke, shadow or something but that seemed outside the scope of the project. */
 .home-title {
-    color: #05668D;
+    color: #EBF2FA;
     font-family: Koulen, Georgia, sans-serif;
     font-size: 2em;
     margin-top: 10px;
@@ -105,25 +149,25 @@ h2 {
 }
 
 .msg h2 {
-    color: white;
+    color: #EBF2FA;
     font-family: Koulen, Georgia, sans-serif;
 }
 
 .msg p {
-    color: white;
+    color: #EBF2FA;
     font-family: Lato, Helvetica, sans-serif;
     font-size: .8em;
     padding-bottom: 15px;
 }
 
 footer a {
-    color: white;
+    color: #EBF2FA;
     text-decoration: none;
     font-family: Lato, Helvetica, sans-serif;
 }
 
 footer a:hover {
-    color: white;
+    color: #EBF2FA;
 }
 
 .logo {
@@ -150,25 +194,93 @@ footer p a:hover {
 
 #logo_link {
     padding-top: 5px;
+    justify-self: center;
+    align-self: center;
 }
 
 footer .social img {
     padding-top: 15px;
 }
 
-rivers-card, .camping-card, .rapids-card {
+.rivers-card, .camping-card, .rapids-card {
     margin: 200px 0;
 }
 
 .card-img {
     border: 10px solid #05668D;
+    transition: transform .5s;
+    box-shadow: 5px 5px 10px #679436;
 }
 
-/* In the example these two looked like they needed more space */
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
 .mountains {
-    padding: 100px 0 200px 0;
+    grid-column: 2/7;
+    grid-row: 5/8;
+    box-shadow: 5px 5px 10px #A5BE00;
 }
 
-.button-box {
-    margin-bottom: 150px;
+.card-img, .mountains {
+    width: 100%;
+}
+
+
+.rivers-card {
+    grid-column: 2/4;
+    grid-row: 2/3;
+}
+
+.camping-card {
+    grid-column: 5/7;
+    grid-row: 2/3;
+}
+
+.rapids-card {
+    grid-column: 8/10;
+    grid-row: 2/3;
+}
+
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
