--- a/genie/styles/site-plan.css
+++ b/genie/styles/site-plan.css
@@ -5,8 +5,8 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --background1: #fcfafa   ;
-  --background2: #a4b8c4 ;
+  --background1: #fcfafa;
+  --background2: #a4b8c4;
   --secondary1: #6e8387;
   --secondary2: #14110F;
   --accent1: #81d652;
@@ -22,7 +22,7 @@ Fonts are separated by a | */
   --headline-color-on-color: #fcfafa; /* headlines on a colored background */ 
   --paragraph-color-on-white: #6e8387; /* paragraph text on a white background */ 
   --paragraph-color-on-color: #fcfafa; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #a4b8c4  ;
+  --paragraph-background-color: #a4b8c4;
   --nav-link-color: #fcfafa;
   --nav-background-color: #6e8387;
   --nav-hover-link-color: #fcfafa;
@@ -79,10 +79,10 @@ p {
 .colors th {
   background-color: #a4b8c4;
 }
-.colors td{
-  width: 25%;
+.colors td {
+  width: 16%;
   height: 3em;
-}
+  }
 
 .background1 {
   background-color: var(--background1);
@@ -184,10 +184,10 @@ nav a:hover {
   border-right: 1px solid;
 }
 
-#accentFont {
+/* #accentFont {
     font-family: var(--accent-font);
 }
 
 #pFont {
     font-family: var(--paragraph-font);
-}
+} */
