--- a/genie/styles/style.css
+++ b/genie/styles/style.css
@@ -3,6 +3,11 @@
 #content {
     max-width: 1200px;
     margin: 0 auto;
+   
+}
+
+main {
+    padding: 0 50px;
 }
 
 nav {
@@ -124,17 +129,16 @@ footer a:hover {
 @media screen and (max-width: 1200px) {
 .right-img-block {
     flex-direction: column;
-    margin: 2em;
-    width: 92%;
+    /* margin: 2em; */
+    width: 100%;
 }
 
 .text-block {
-  width: 92%;
+  width: 100%;
   margin: 2em auto 0 auto;
 }
 .stacked {
-    width: 92%;
-    padding: 0 2em;
+    width: 100%;
     margin: 0;
 }
 
@@ -156,5 +160,10 @@ footer p {
 
 footer a {
     padding: 10px;
+}
+p {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 1.25em;
+    margin: 0 0 1.5em 0;
 }
 }
