--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,8 @@ body {
   a {
     color: white;
     margin: 40px;
+    font-size: 1em;
+    text-decoration: none;
   }
 
   h1 {
@@ -18,6 +20,7 @@ body {
   img {
     width: 800px;
     border: 4px solid steelblue;
+    margin-top: 20px;
   }
   p {
     padding: 10px;
@@ -25,4 +28,43 @@ body {
   footer {
     background-color: steelblue;
     color: white;
+  }
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: 50px auto;
+    text-align: center;
+  }
+  
+  .title {
+    color: grey;
+    font-size: 18px;
+  }
+  
+  button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 18px;
+  }
+/*   
+  a {
+    text-decoration: none;
+    font-size: 22px;
+    color: black;
+  } */
+  
+  button:hover, a:hover {
+    opacity: 0.7;
+  }
+
+  .fa {
+    color: steelblue;
+    font-size: 3em;
   }
