change width to max-width for firefox

--- a/genie/styles/style.css
+++ b/genie/styles/style.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4 {
 }
 
 .stacked-img {
-    width: 70%;
+    max-width: 70%;
     display: flex;
     margin: 2em auto 3em auto;
 }
@@ -81,14 +81,14 @@ margin: 2em auto 0 auto;
 
 .right-img {
     display: flex;
-    width: 40%;
+    max-width: 40%;
     height: 100%;
     margin-left: 3em;
 }
 
 .left-img {
     display: flex;
-    width: 15%;
+    max-width: 15%;
     height: 100%;
     margin-right: 3em;
 }
@@ -146,7 +146,7 @@ footer a:hover {
     margin: 20px auto 0 auto;
 }
 .left-img {
-    width: 300px;
+    max-width: 300px;
     margin: 20px auto 50px auto;
 }
 
