--- a/genie/styles/site-plan.css
+++ b/genie/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Dancing+Script&family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&family=Lato&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -14,7 +14,6 @@ Fonts are separated by a | */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Lato";
-  --accent-font: "Dancing Script";
   --paragraph-font: "Courier Prime";
 
   /* these colors below should be chosen from among your palette colors above */
@@ -185,9 +184,7 @@ nav a:hover {
   border-right: 1px solid;
 }
 
-/* #accentFont {
-    font-family: var(--accent-font);
-}
+/* 
 
 #pFont {
     font-family: var(--paragraph-font);
